--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,6 @@ jupyter = "*"
 torch = "*"
 torchvision = "*"
 torchaudio = "*"
-mmdet = "*"
 openmim = "*"
 wandb = "*"
 plotly = "*"
@@ -25,11 +24,11 @@ ipykernel = "*"
 funcy = "*"
 scikit-multilearn = "*"
 numpy = "*"
+autopep8 = "*"
+mmdet = "*"
 
 [dev-packages]
-funcy = "*"
-scikit-multilearn = "*"
-autopep8 = "*"
+gpustat = "*"
 
 [requires]
 python_version = "3.8"
