--- a/Pipfile
+++ b/Pipfile
@@ -17,17 +17,18 @@ jupyter = "*"
 torch = "*"
 torchvision = "*"
 torchaudio = "*"
-mmdet = "*"
 openmim = "*"
 wandb = "*"
 plotly = "*"
 ipykernel = "*"
 funcy = "*"
 scikit-multilearn = "*"
+numpy = "*"
+autopep8 = "*"
+mmdet = "*"
 
 [dev-packages]
-funcy = "*"
-scikit-multilearn = "*"
+gpustat = "*"
 
 [requires]
 python_version = "3.8"
